--- a/offsets.ini
+++ b/offsets.ini
@@ -1,7 +1,7 @@
 //player
 playerNick=010D0C68 70 4
 playerMaxHP=01C89BA0 0 10 90 0 90 10 5C8
-playerMaxMP=01C94AA8 18 28 88 0 5C8
+playerMaxMP=01C8E4F0 0 20 48 0 90 8 5C8
 playerMP=8
 playerX=010D0C68 20 89C
 playerY=4
