--- a/offsets.ini
+++ b/offsets.ini
@@ -9,6 +9,9 @@ playerZ=8
 playerHP=1C
 playerCos=010D0C68 20 8 10 CC
 playerSin=4
+playerGX=010EE858 28 560
+playerGY=8
+playerGZ=10
 //target
 targetName=01C8CC18 0 10 90 38 90 20 5D8
 targetMaxHP=01C8CC18 0 10 90 0 90 10 5C8
